--- a/src/app/pages/crud/registrar-empresa/registrar-empresa.component.html
+++ b/src/app/pages/crud/registrar-empresa/registrar-empresa.component.html
@@ -46,7 +46,7 @@
               value="form-control"
               required
             />
-            <div class="invalid-feedback">El campo es requerido!</div>
+            <div class="invalid-feedback">El campo es requerido</div>
           </div>
         <div class="col-md-6">
           <label for="strDireccion" class="form-label">Direccion</label>
