--- a/src/app/pages/crud/registrar-empresa/registrar-empresa.component.html
+++ b/src/app/pages/crud/registrar-empresa/registrar-empresa.component.html
@@ -31,7 +31,7 @@
             value="form-control"
             required
           />
-          <div class="invalid-feedback">El campo es requerido!</div>
+          <div class="invalid-feedback">El campo es requerido</div>
         </div>
         <div class="col-md-6">
             <label for="strRFC" class="form-label">RFC</label>
