--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -166,8 +166,8 @@
             <img src="../assets/img/atack.jpg" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title">Attack on Titan</h5>
-              <p class="card-text">My top 1 in Series</p>
-              <a href="#" class="btn btn-primary">ver Mas</a>
+              <p class="card-text">Accion, Drama, Superpoderes, Fantasia</p>
+              <a href="#" class="btn btn-primary" href="https://www3.animeflv.net/anime/shingeki-no-kyojin">Ir a la serie</a>
             </div>
           </div>
         </div>
@@ -177,8 +177,8 @@
             <img src="../assets/img/cote.jpg" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title">Classroom of the elite</h5>
-              <p class="card-text">Mi serie top 2</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
+              <p class="card-text">Comedia, Escolares, Romance</p>
+              <a href="#" class="btn btn-primary" href="https://www3.animeflv.net/anime/youkoso-jitsuryoku-shijou-shugi-no-kyoushitsu-e-tv">Ir a la serie</a>
             </div>
           </div>
         </div>
@@ -188,8 +188,8 @@
             <img src="../assets/img/suba.jpg" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title">KonoSuba</h5>
-              <p class="card-text">Mi serie top 3</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
+              <p class="card-text">Comedia, Aventura, Fantasia</p>
+              <a href="#" class="btn btn-primary" href="https://www3.animeflv.net/anime/kono-subarashii-sekai-ni-shukufuku-wo">Ir a la serie</a>
             </div>
           </div>
         </div>
@@ -241,7 +241,7 @@
         <a class="btn" href="#">Volver arriva</a>
       </button>
       <br />
-      <p>&copy; 2020–2022 UTMA, Inc.</p>
+     
     </footer>
   </main>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
