--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,10 @@
 
   .b-example-divider {
     height: 3rem;
-    background-color: rgba(0, 0, 0, 0.1);
-    border: solid rgba(0, 0, 0, 0.15);
+    background-color:;
+    border: 
     border-width: 1px 0;
-    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+    box-shadow: 
       inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
   }
 
@@ -53,11 +53,11 @@
 </style>
 <div>
 <nav
-  class="navbar navbar-expand-md"
-  style="background-color: #f70606"
+  class="navbar navbar-expand-lg navbar-light bg-light"
+  style="background-color: #111010"
 > <!--fixed-top-->
   <div class="container-fluid">
-    <a class="navbar-brand" href="#" style="color: #fff; font-weight: bold;">FALO</a>
+    <a class="navbar-brand" href="#" style="color: rgb(20, 20, 20); font-weight: bold;">FALO</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -76,29 +76,21 @@
             class="nav-link active"
             aria-current="page"
             href="#"
-            style="color: #fff; font-weight: bold;"
+            style="color: rgb(7, 7, 7); font-weight: bold;"
             >Home</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#row" style="color: #fff; font-weight: bold;">Top Series</a>
+          <a class="nav-link" href="#row" style="color: rgb(12, 11, 11); font-weight: bold;">Top Series</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#music" style="color: #fff; font-weight: bold;">Series</a>
+          <a class="nav-link" href="#music" style="color: rgb(19, 18, 18); font-weight: bold;">Series</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/crud" style="color: #fff; font-weight: bold;">Empresa</a>
+          <a class="nav-link" routerLink="/crud" style="color: rgb(10, 10, 10); font-weight: bold;">Empresa</a>
         </li>
       </ul>
-      <!-- <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-warning" type="submit">Search</button>
-      </form> -->
+      
     </div>
   </div>
 </nav>
