--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -87,9 +87,10 @@
               </p>
               <p>
                 <a
-                  class="btn btn-lg btn-primary"
+                  class="btn btn-danger"
                   href="https://www3.animeflv.net/anime/haikyuu"
                   target="_blank"
+                  
                   >Serie de Haikyuu</a
                 >
               </p>
@@ -106,7 +107,7 @@
               </p>
               <p>
                 <a
-                  class="btn btn-lg btn-primary"
+                  class="btn btn-danger"
                   href="https://www3.animeflv.net/anime/dragon-ball-super"
                   target="_blank"
                   >Serie de Dragon Ball</a
@@ -125,7 +126,7 @@
               </p>
               <p>
                 <a
-                  class="btn btn-lg btn-primary"
+                  class="btn btn-danger"
                   href="https://www3.animeflv.net/anime/kimetsu-no-yaiba"
                   >Serie Demon Slayers</a
                 >
